<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_bookmarks_page"
        android:title="@string/bookmarks"
        android:icon="@drawable/ic_bookmark_white_24px"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/action_add_program"
        android:icon="@drawable/ic_add_white_24px"
        android:title="@string/add"

        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_log_out"
        android:title="@string/log_out"
        app:showAsAction="never"/>



</menu>