<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_file_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="2">

        <CheckBox
            android:text="@string/upload_from_storage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/fileUploadCheck"
            android:textColor="@android:color/white"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:paddingTop="20dp" />

        <Button
            android:text="@string/submit"
            android:backgroundTint="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/submitTextButton"
            android:padding="20dp"
            android:layout_margin="7dp"
            android:layout_weight="1" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/program_title"
        android:background="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/programTitle"
        android:padding="10dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/type_your_program"
        android:background="@android:color/white"
        android:layout_below="@id/programTitle"
        android:layout_above="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/editorText"
        android:padding="10dp"
        android:layout_marginEnd="20dp"/>




</RelativeLayout>
