<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="15dp"
    app:cardBackgroundColor="@color/lightGrey">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:padding="7dp"
            android:text="@string/post_tile_goes_here"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/poster_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/poster_s_name"
            android:textSize="17sp"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="7dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/post_date"
                android:textStyle="normal|italic" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


            <com.like.LikeButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:icon_size="20dp"
                app:icon_type="heart" />

            <TextView
                android:id="@+id/post_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes" />


            <ImageButton
                android:id="@+id/bookmark_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingBottom="10dp"
                android:paddingEnd="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="8dp"
                android:paddingStart="10dp"
                app:srcCompat="@drawable/ic_bookmark_border_black_24px" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>