<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    app:cardBackgroundColor="@color/post_card_background">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/post_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="4"
            android:padding="8dp"
            android:text="@string/post_tile_goes_here"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/poster_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/poster_s_name"
            android:textSize="17sp"
            android:textStyle="normal|bold"
            app:layout_constraintLeft_toLeftOf="@+id/post_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_title" />

        <TextView
            android:id="@+id/post_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/post_date"
            android:textStyle="normal|italic"
            app:layout_constraintLeft_toLeftOf="@+id/poster_name"
            app:layout_constraintTop_toBottomOf="@+id/poster_name" />

        <TextView
            android:id="@+id/post_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="0dp"
            android:text="@string/likes"
            app:layout_constraintBottom_toBottomOf="@+id/bookmark_button"
            app:layout_constraintRight_toLeftOf="@+id/bookmark_button"
            app:layout_constraintTop_toTopOf="@+id/bookmark_button" />

        <com.like.LikeButton
            android:id="@+id/bookmark_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            app:circle_end_color="@color/normalGrey"
            app:circle_start_color="@android:color/black"
            app:dots_primary_color="@android:color/black"
            app:dots_secondary_color="@color/normalGrey"
            app:icon_size="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/post_date"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_name"
            app:like_drawable="@drawable/ic_bookmark_black_24px"
            app:unlike_drawable="@drawable/ic_bookmark_border_black_24px" />

        <com.like.LikeButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            app:icon_size="20dp"
            app:icon_type="heart"
            app:layout_constraintBottom_toBottomOf="@+id/post_like"
            app:layout_constraintRight_toLeftOf="@+id/post_like"
            app:layout_constraintTop_toTopOf="@+id/post_like" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>