<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_email_white_48px" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_layout_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="4"
                    android:textColorHint="@color/colorPrimary"
                    app:hintAnimationEnabled="true">

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_id"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_layout"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_key_white_48px" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_layout_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="4"
                    android:textColorHint="@color/colorPrimary"
                    app:hintAnimationEnabled="true">

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_layout"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:padding="0dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/signin_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/signin"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/google_signin_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/ic_google_logo"
                    android:drawableStart="@mipmap/ic_google_logo"
                    android:text="@string/signin"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>